--- a/login.html
+++ b/login.html
@@ -9,6 +9,15 @@
 </head>
 
 <body>
+    <div class="tools">
+        <div class="loader_box">
+            <div class="container">
+                <div class="loader__block">
+                    <div class="loader"></div>
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="root">
         <div class="container">
             <div class="login">
@@ -36,7 +45,7 @@
             </div>
         </div>
     </div>
-    
+
     <script type="module" src="../src/scripts/js/login.js"></script>
 </body>
 
